0.315 2015/02/18
- L7::HTTP support for Websockets
- L7::HTTP exportable function parse_reqhdr to parse a request header
0.314 2015/02/16
- L7::HTTP option header_maxsize for new_connection allows it to configure the
  maximum size of the message headers.
0.313 2015/02/06
- L7::HTTP fixed offset calculation in case of gaps
0.312 2015/01/28
- L7::HTTP fixed handling of some broken input
0.311 2015/01/26
- L7::HTTP
  - allow \x80-\xff in field-name
  - allow gaps for upgraded connections (i.e. calls for in_data)
  - better detection of chunked encoding, that is accept if given together with
    parameters or with further transfer-encodings inside the same field-value
  - expect body data (especially gaps) only with CONNECT once a successful
    response was received.
  - some code refactoring
0.310 2015/01/20
- L7::HTTP 
  - gap_diff, gap_offset, offset behave now as expected in array
    and scalar context. 
  - correctly mark end of body in call of in_request_body
  - fix for handling gaps in response
0.309 2015/01/07
- L7::HTTP - connections can now track where gaps are possible (i.e. body data
  not needed for HTTP analysis itself), see gap_offset, gap_diff.
- L7::HTTP - bugfix for correctly calculating offset with chunked requests
0.308 2015/01/06
- L7::HTTP - fixed typo in METHODS_WITHOUT_RQBODY (use of METHODS_WITHOUT_RPBODY
  instead of METHODS_WITHOUT_RQBODY)
- L7::HTTP - check that content-length is valid number
0.307 2014/12/12
- L7::HTTP - export some functionality for external use
0.306 2014/12/11
- L7::HTTP - fix bug when calling in_junk
0.305 2014/11/12
- Net::Inspect::IP: don't endless-loop if we don't find the expected
  protocol header in the IPv6 headers. Accept ICMPv6 as protocol header.
0.304 2014/07/03
- added IPv6 support for L3::IP
0.303 2013/11/08
- fix L4::TCP for case, where FIN+ACK not only acked FIN but also previous data
- tools/tcpudpflow: add feature to write each flow as single pcap file (needs