@@ -1,6 +1,7 @@
 0.315 2015/02/18
 - L7::HTTP support for Websockets
-- L7::HTTP exportable function parse_reqhdr to parse a request header
+- L7::HTTP exportable function parse_reqhdr and parse_rsphdr to parse
+  message header
 0.314 2015/02/16
 - L7::HTTP option header_maxsize for new_connection allows it to configure the
   maximum size of the message headers.
